[package]
name = "download_mtc"
version = "0.1.0"
edition = "2024"
authors = ["tvmthtr@gmail.com"]
license = "MIT"
description = "A fast CLI tool for downloading and packaging MTC content into EPUB format."
repository = "https://github.com/Mintori09/download_mtc"
readme = "README.md"
categories = ["command-line-utilities", "web-programming"]
keywords = ["mtc", "scraper", "epub", "downloader"]

# Optimize build output for release
[profile.release]
opt-level = "z"          # Optimize for size (use "3" for speed)
lto = true               # Enable Link-Time Optimization
codegen-units = 1        # Single codegen unit for smaller & faster binary
strip = "symbols"        # Strip debug symbols to reduce size
panic = "abort"          # Avoid stack unwinding overhead
incremental = false

[dependencies]
# CLI argument parsing
clap = { version = "4.5.47", features = ["derive"] }
dotenv = "0.15.0"

# EPUB creation
epub-builder = "0.8.0"

# Headless browser for scraping
headless_chrome = "1.0.18"

# Sorting, regex, parsing utilities
natord = "1.0.9"
regex = "1.12.2"
scraper = "0.24.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"


